[package]
name = "caml-dyn-call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocaml-interop = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slotmap = { version = "1.0.7", features = ["serde"] }

[lib]
crate-type = ["cdylib"]
